tests/positive/while_typical.em
int main() {
    int x = 10;
    int sum = 0;
    while (x > 0) {
        sum = sum + x;
        x = x - 1;
    }
    return sum;
}