tests/negative/while_typical.em
int main() {
    int x = 5;
    while (x > 0)
    return 0;
}